--- a/MT_systems/esqu/grammar/es-qu.cfg
+++ b/MT_systems/esqu/grammar/es-qu.cfg
@@ -1,39 +1,20 @@
 # Define environment variables
-GRAMMAR_DIR=/home/clsquoia/svn_quechua/matxin/squoiaMatxin/esqu/grammar
+GRAMMAR_DIR=/home/clsquoia/google_squoia/MT_systems/esqu/grammar
 
-###################
-#### Matxin Options
-###################
-
-# Transfer options 
-#LT
+####################
+#   Grammar Files  #
+####################
 
 SemFile=$GRAMMAR_DIR/qu_roots_sem
 LexSelFile=$GRAMMAR_DIR/lexSelFile
 MorphSelFile=$GRAMMAR_DIR/morphSelFile
-#ST_intra
-# Annette's TODO: this is German!!! put your intrachunk transfer (formerly intra_move) here!
 IntraTransferFile=$GRAMMAR_DIR/esqu_intrachunk_transfer.dat
 
-#ST_inter
-#InterMoveFile1=$MATXIN_DIR/share/matxin/gram/es-qu/qu_interchunk_move.dat
-
-#ST_prep
-#SubCatFile=$MATXIN_DIR/share/matxin/dict/es-eu/eu_verb_subcat.txt
 PrepFile=$GRAMMAR_DIR/esqu_prep.txt
-#TripletsFile=$MATXIN_DIR/share/matxin/dict/es-eu/eu_verb_noun_subcat.txt
 
-#ST_verb
-#VerbTransferFile=$MATXIN_DIR/share/matxin/gram/es-eu/eseu_verb_transfer.dat
-
-#SG_inter
 ChunkOrderFile=$GRAMMAR_DIR/qu_interChunkOrder.dat
 
-
-#SG_intra
-
 NodeOrderFile=$GRAMMAR_DIR/nodeOrderInChunk.dat
-#POSTransFile=$MATXIN_DIR/share/matxin/dict/es-eu/eu_changes_sint.txt
 
 FirstCase=yes
 UsePrepRules=yes
