--- a/MT_systems/esqu/grammar/es-qu.cfg
+++ b/MT_systems/esqu/grammar/es-qu.cfg
@@ -10,7 +10,7 @@ LexSelFile=$GRAMMAR_DIR/lexSelFile
 MorphSelFile=$GRAMMAR_DIR/morphSelFile
 IntraTransferFile=$GRAMMAR_DIR/esqu_intrachunk_transfer.dat
 
-PrepFile=$GRAMMAR_DIR/esqu_prep.txt
+PrepFile=$GRAMMAR_DIR/prepSelFile
 
 ChunkOrderFile=$GRAMMAR_DIR/qu_interChunkOrder.dat
 
