--- a/MT_systems/esqu/grammar/es-qu.cfg
+++ b/MT_systems/esqu/grammar/es-qu.cfg
@@ -4,17 +4,17 @@ GRAMMAR_DIR=/home/clsquoia/google_squoia/MT_systems/esqu/grammar
 ####################
 #   Grammar Files  #
 ####################
+#esqu_intrachunk_transfer.rules  esqu_lexSelection.rules  esqu_morphSelection.rules  esqu_prepSelection.rules  esqu_semanticTags.rules 
+SemFile=$GRAMMAR_DIR/esqu_semanticTags.rules
+LexSelFile=$GRAMMAR_DIR/esqu_lexSelection.rules
+MorphSelFile=$GRAMMAR_DIR/esqu_morphSelection.rules
+IntraTransferFile=$GRAMMAR_DIR/esqu_intrachunk_transfer.rules
 
-SemFile=$GRAMMAR_DIR/qu_roots_sem
-LexSelFile=$GRAMMAR_DIR/lexSelFile
-MorphSelFile=$GRAMMAR_DIR/morphSelFile
-IntraTransferFile=$GRAMMAR_DIR/esqu_intrachunk_transfer.dat
+PrepFile=$GRAMMAR_DIR/esqu_prepSelection.rules
 
-PrepFile=$GRAMMAR_DIR/prepSelFile
+ChunkOrderFile=$GRAMMAR_DIR/qu_interChunkOrder.rules
 
-ChunkOrderFile=$GRAMMAR_DIR/qu_interChunkOrder.dat
-
-NodeOrderFile=$GRAMMAR_DIR/nodeOrderInChunk.dat
+NodeOrderFile=$GRAMMAR_DIR/qu_nodeOrderInChunk.rules
 
 FirstCase=yes
 UsePrepRules=yes
