--- a/MT_systems/esqu/grammar/es-qu.cfg
+++ b/MT_systems/esqu/grammar/es-qu.cfg
@@ -9,12 +9,15 @@ SemFile=$GRAMMAR_DIR/esqu_semanticTags.rules
 LexSelFile=$GRAMMAR_DIR/esqu_lexSelection.rules
 MorphSelFile=$GRAMMAR_DIR/esqu_morphSelection.rules
 IntraTransferFile=$GRAMMAR_DIR/esqu_intrachunk_transfer.rules
+STInterTransferFile=$GRAMMAR_DIR/esqu_STinterchunk.dat
 
 PrepFile=$GRAMMAR_DIR/esqu_prepSelection.rules
 
 ChunkOrderFile=$GRAMMAR_DIR/qu_interChunkOrder.rules
 
 NodeOrderFile=$GRAMMAR_DIR/qu_nodeOrderInChunk.rules
+
+
 
 FirstCase=yes
 UsePrepRules=yes
