--- a/MT_systems/esqu/grammar/es-qu.cfg
+++ b/MT_systems/esqu/grammar/es-qu.cfg
@@ -10,12 +10,10 @@ LexSelFile=$GRAMMAR_DIR/esqu_lexSelection.rules
 MorphSelFile=$GRAMMAR_DIR/esqu_morphSelection.rules
 IntraTransferFile=$GRAMMAR_DIR/esqu_intrachunk_transfer.rules
 STInterTransferFile=$GRAMMAR_DIR/esqu_STinterchunk.dat
-
 PrepFile=$GRAMMAR_DIR/esqu_prepSelection.rules
-
 ChunkOrderFile=$GRAMMAR_DIR/qu_interChunkOrder.rules
-
 NodeOrderFile=$GRAMMAR_DIR/qu_intrachunkOrder.rules
+NodeChunkFile=$GRAMMAR_DIR/qu_nodesToChunk.dat
 
 
 
