--- a/trunk/morphology/analyzer_xfst/Makefile
+++ b/trunk/morphology/analyzer_xfst/Makefile
@@ -13,7 +13,7 @@
 
 # indicate path to text file to analyse:
 
-TEXTS:=  texts/acuerdo_nacional_QUE.txt
+TEXTS:=  texts/la_literatura_quechua_QUE_Gross.txt
 
 normal:  quechua-web.fst 
 db: quechua-web-db.fst
@@ -24,10 +24,10 @@ analysed.txt: normal
 	cat $(TEXTS) | perl tokenize.pl | lookup -flags xcKv29TT quechua-web.fst | tail -n+2  > $@
 
 analysed-db.txt: db
-	cat $(TEXTS) | perl tokenize.pl | lookup -flags xcKv29TT quechua-web-db.fst | tail -n+2  > $@$@
+	cat $(TEXTS) | perl tokenize.pl | lookup -flags xcKv29TT quechua-web-db.fst | tail -n+2  > $@
 
 analysed-db-truecase.txt: db
-	cat $(TEXTS) | perl tokenize.pl | lookup -flags cKv29TT quechua-web-db.fst | tail -n+2  > $@$@
+	cat $(TEXTS) | perl tokenize.pl | lookup -flags cKv29TT quechua-web-db.fst | tail -n+2  > $@
 
 vertical.tsv: analysed.txt, vertical
 	 tokenize verticalize.fst < $< |  tail -n+2 | perl -F'\t' -lane '; print "$$F[0]\t$$F[1]"' | perl -F'\[' -lane '; print "$$F[0]\t$$F[1]"' > $@
