child to sibling of parent chunk

--- a/MT_systems/esde/es-de.cfg
+++ b/MT_systems/esde/es-de.cfg
@@ -132,6 +132,8 @@ TripletsFile=/opt/matxin/local/share/matxin/dict/es-de/de_verb_noun_subcat.txt
 VerbPrepFile=$GRAMMAR_DIR/esde_verb_prep.dat
 VerbTransferFile=/opt/matxin/local/share/matxin/gram/es-de/esde_verb_transfer.dat
 
+ChildToSiblingFile=$GRAMMAR_DIR/de_childToSiblingChunk.dat
+
 # SG_inter: Syntactical Generation between (INTER) chunks
 #ChunkOrderFile=/opt/matxin/local/share/matxin/gram/es-de/de_interchunk_order.dat
 ChunkOrderFile=$GRAMMAR_DIR/de_interChunkOrder.dat
