--- a/MT_systems/esqu/grammar/es-qu.cfg
+++ b/MT_systems/esqu/grammar/es-qu.cfg
@@ -14,6 +14,7 @@ PrepFile=$GRAMMAR_DIR/esqu_prepSelection.rules
 ChunkOrderFile=$GRAMMAR_DIR/qu_interChunkOrder.rules
 NodeOrderFile=$GRAMMAR_DIR/qu_intrachunkOrder.rules
 NodeChunkFile=$GRAMMAR_DIR/qu_nodesToChunk.dat
+ChildToSiblingFile=$GRAMMAR_DIR/qu_childToSiblingChunk.dat
 
 
 
