--- a/trunk/MT_systems/esde/grammar/chunktype_es-de.cfg
+++ b/trunk/MT_systems/esde/grammar/chunktype_es-de.cfg
@@ -16,6 +16,7 @@ coord	CC	#conjunción coordinada	#coordination conjunction
 coor-sp	CPP	#sintagma preposicional que contiene una conjunción coordinada	#coordinated prepositional phrase
 coor-n	CNP	#sintagma nominal que contiene una conjunción coordinada	#coordinated nominal phrase
 coor-v	CVP	#sintagma verbal que contiene una conjunción coordinada	#coordinated verb phrase
+coor-sa	CAP	#sintagma adjetivo que contiene una conjunción coordinada	#coordinated adjective phrase
 coor-adj	CAP	#sintagma adjetivo que contiene una conjunción coordinada	#coordinated adjective phrase
 verb-pass	V-pas	#verbo en forma pasiva	#verb in passive
 subord	S-sub	#oración subordinada	#subordinated sentence
