example config freeling

--- a/FreeLingModules/example.cfg
+++ b/FreeLingModules/example.cfg
@@ -50,10 +50,10 @@ OutputFormat=tagged
 AlwaysFlush=yes
 
 #### Tokenizer options
-TokenizerFile=$HOME/google_squoia/FreeLingModules/grammar_es/tokenizer.dat
+TokenizerFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/tokenizer.dat
 
 #### Splitter options
-SplitterFile=$HOME/google_squoia/FreeLingModules/grammar_es/splitter.dat
+SplitterFile=/opt/share/freeling/es/splitter.dat
 
 #### Morfo options
 AffixAnalysis=yes
@@ -67,44 +67,44 @@ ProbabilityAssignment=yes
 OrthographicCorrection=no
 DecimalPoint=,
 ThousandPoint=.
-LocutionsFile=$HOME/google_squoia/FreeLingModules/grammar_es/locucions_laura.dat 
-QuantitiesFile=$HOME/google_squoia/FreeLingModules/grammar_es/quantities.dat
-AffixFile=$HOME/google_squoia/FreeLingModules/grammar_es/afixos_desr.dat
-#ProbabilityFile=$HOME/google_squoia/FreeLingModules/grammar_es/probabilitats.dat_old
-ProbabilityFile=$HOME/google_squoia/FreeLingModules/grammar_es/probabilitats.dat
+LocutionsFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/locucions_laura.dat 
+QuantitiesFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/quantities.dat
+AffixFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/afixos_desr.dat
+#ProbabilityFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/probabilitats.dat_old
+ProbabilityFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/probabilitats.dat
 #ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
-DictionaryFile=$HOME/google_squoia/FreeLingModules/grammar_es/dicc_desr.src
-PunctuationFile=$HOME/google_squoia/FreeLingModules/common/punct.dat
+DictionaryFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/dicc_desr.src
+PunctuationFile=/opt/share/freeling/common/punct.dat
 ProbabilityThreshold=0.001
 
 # NER options 
 NERecognition=yes
-NPDataFile=$HOME/google_squoia/FreeLingModules/grammar_es/np_desr.dat
+NPDataFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/np_desr.dat
 ## comment line above and uncomment that below, if you want 
 ## a better NE recognizer (higer accuracy, lower speed)
-#NPDataFile=$HOME/google_squoia/FreeLingModules/grammar_es/ner/ner-ab.dat
+#NPDataFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/ner/ner-ab.dat
 
 #Spelling Corrector config file
-CorrectorFile=$HOME/google_squoia/FreeLingModules/grammar_es/corrector/corrector.dat
+CorrectorFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/corrector/corrector.dat
 
 ## Phonetic encoding of words.
 Phonetics=no
-PhoneticsFile=$HOME/google_squoia/FreeLingModules/grammar_es/phonetics.dat
+PhoneticsFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/phonetics.dat
 
 ## NEC options
 NEClassification=yes
 NECFile=$FREELINGSHARE/es/nerc/nec/nec-ab-poor1.dat
-#NECFile=$HOME/google_squoia/FreeLingModules/grammar_es/nec/nec-svm.dat
+#NECFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/nec/nec-svm.dat
 
 ## Sense annotation options (none,all,mfs,ukb)
 SenseAnnotation=none
-SenseConfigFile=$HOME/google_squoia/FreeLingModules/grammar_es/senses.dat
-UKBConfigFile=$HOME/google_squoia/FreeLingModules/grammar_es/ukb.dat
+SenseConfigFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/senses.dat
+UKBConfigFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/ukb.dat
 
 #### Tagger options
 Tagger=relax
-TaggerHMMFile=$HOME/google_squoia/FreeLingModules/grammar_es/tagger.dat
-TaggerRelaxFile=$HOME/google_squoia/FreeLingModules/grammar_es/constr_gram_nora.dat
+TaggerHMMFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/tagger.dat
+TaggerRelaxFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/constr_gram_nora.dat
 TaggerRelaxMaxIter=500
 TaggerRelaxScaleFactor=670.0
 TaggerRelaxEpsilon=0.001
