--- a/trunk/FreeLingModules/example.cfg
+++ b/trunk/FreeLingModules/example.cfg
@@ -53,7 +53,7 @@ AlwaysFlush=yes
 TokenizerFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/tokenizer.dat
 
 #### Splitter options
-SplitterFile=/opt/share/freeling/es/splitter.dat
+SplitterFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/splitter.dat
 
 #### Morfo options
 AffixAnalysis=yes
