check freeling and desr sever status

--- a/MT_systems/package/squoia/esqu/es-qu.cfg
+++ b/MT_systems/package/squoia/esqu/es-qu.cfg
@@ -17,10 +17,14 @@ outformat=nbest
 wapiti=/home/clsquoia/Wapiti
 wapitiModel=$SQUOIA_DIR/models/3gram_enhancedAncora.model
 freelingPort=8844
+freelingConf=/home/clsquoia/google_squoia/FreeLingModules/es_desr.cfg
 matxin=/opt/matxin/local/bin
 
 ## set variables for desr parser
-desrPort=5678
+desrPort1=5678
+desrPort2=1234
+desrModel1=/home/clsquoia/parser/desr-1.3.2/spanish_es4.MLP
+desrModel2=/home/clsquoia/parser/desr-1.3.2/spanish.MLP
 
 ## set variables for lexical transfer
 bidix=$SQUOIA_DIR/squoia/esqu/lexica/es-quz.bin
@@ -50,14 +54,5 @@ morphgenerator=$SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst
 quModel=$SQUOIA_DIR/models/test_qu_lm.binary
 nbest=3;
 
-FirstCase=yes
-UsePrepRules=yes
-UseLexRules=yes
-UseSubcat=yes
-UseTripletes=no
 
-DoVerbTrace=false
-DoGenTrace=false
-DoPrepTrace=false
-DoTrace=false
 
