--- a/trunk/MT_systems/package/squoia/esqu/es-qu.cfg
+++ b/trunk/MT_systems/package/squoia/esqu/es-qu.cfg
@@ -11,6 +11,7 @@ direction=esqu
 #	prepdisamb, intraTrans, interTrans, intraOrder, 
 #	interOrder, morph, words
 outformat=nbest
+informat=senttok
 
 ## set variables for tagging (FreeLing and Wapiti)
 # tagging
