--- a/MT_systems/package/squoia/esqu/es-qu.cfg
+++ b/MT_systems/package/squoia/esqu/es-qu.cfg
@@ -19,7 +19,7 @@ wapiti=/home/clsquoia/Wapiti
 wapitiModel=$SQUOIA_DIR/models/3gram_enhancedAncora.model
 freelingPort=8844
 freelingConf=/home/clsquoia/google_squoia/FreeLingModules/es_desr.cfg
-matxin=/opt/matxin/local/bin
+matxin=$SQUOIA_DIR/bin
 
 ## set variables for desr parser
 desrPort1=5678
