--- a/trunk/MT_systems/package/squoia/esqu/es-qu.cfg
+++ b/trunk/MT_systems/package/squoia/esqu/es-qu.cfg
@@ -52,7 +52,7 @@ ChildToSiblingFile=$GRAMMAR_DIR/qu_childToSiblingChunk.rules
 morphgenerator=$SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst
 
 ## set variables for language model
-quModel=$SQUOIA_DIR/models/test_qu_lm.binary
+quModel=$SQUOIA_DIR/models/all_norm_3gram_interpolated_unigrams.lm
 nbest=3;
 
 
