--- a/MT_systems/package/squoia/esde/es-de.cfg
+++ b/MT_systems/package/squoia/esde/es-de.cfg
@@ -68,7 +68,7 @@ morphgenerator=$SQUOIA_DIR/squoia/esde/morphgen/SttsGeneratorTool.fst
 BilexProbFile=$GRAMMAR_DIR/../lm/bilexprob.dat
 
 # ST_verb: Syntactical Transfer for Verbs
-VerbPrepFile=$GRAMMAR_DIR/esde_verb_prep.dat
+VerbPrepFile=$GRAMMAR_DIR/esde_verbPrepSelection.rules
 
 # deModel
 deModel=$SQUOIA_DIR/models/all_norm_3gram_interpolated_unigrams.lm
