esde stat disamb, alternatives

--- a/MT_systems/package/squoia/esde/es-de.cfg
+++ b/MT_systems/package/squoia/esde/es-de.cfg
@@ -65,7 +65,9 @@ morphgenerator=$SQUOIA_DIR/squoia/esde/morphgen/SttsGeneratorTool.fst
 
 ## set specific variables for German translation
 # Statistical lexical selection
-BilexProbFile=$GRAMMAR_DIR/../lm/bilexprob.dat
+BilexProbFile=$GRAMMAR_DIR/esde_bilexprob.tab
+deLemmaModel=$SQUOIA_DIR/squoia/esde/dewac10M_3g_lemma.bin.lm
+maxalt=2
 
 # ST_verb: Syntactical Transfer for Verbs
 VerbPrepFile=$GRAMMAR_DIR/esde_verbPrepSelection.rules
