test wapiti client/server

--- a/MT_systems/package/squoia/esde/es-de.cfg
+++ b/MT_systems/package/squoia/esde/es-de.cfg
@@ -17,6 +17,7 @@ informat=senttok	# plain|senttok|...|words
 # tagging
 wapiti=/home/clsquoia/Wapiti
 wapitiModel=$SQUOIA_DIR/models/3gram_enhancedAncora.model
+wapitiPort=8888
 freelingPort=8844
 #freelingPort=8866
 #freelingConf=/home/clsquoia/de_squoia/FreeLingModules/es_desr.cfg
