--- a/MT_systems/package/squoia/esqu/es-qu.cfg
+++ b/MT_systems/package/squoia/esqu/es-qu.cfg
@@ -17,6 +17,7 @@ informat=senttok
 # tagging
 wapiti=/home/clsquoia/Wapiti
 wapitiModel=$SQUOIA_DIR/models/3gram_enhancedAncora.model
+wapitiPort=8888
 freelingPort=8844
 freelingConf=/home/clsquoia/google_squoia/FreeLingModules/es_desr.cfg
 matxin=$SQUOIA_DIR/bin
