--- a/MT_systems/squoia/esqu/es-qu.cfg
+++ b/MT_systems/squoia/esqu/es-qu.cfg
@@ -53,7 +53,9 @@ ChildToSiblingFile=$GRAMMAR_DIR/qu_childToSiblingChunk.rules
 morphgenerator=$SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst
 
 ## set variables for language model
-quModel=$SQUOIA_DIR/models/all_norm_3gram_interpolated_unigrams.lm
+#quModel=$SQUOIA_DIR/models/all_norm_3gram_interpolated_unigrams.lm
+quModel=$SQUOIA_DIR/models/cleaned_all_norm_5grams_interpolated.lm 
+
 nbest=3;
 
 
