--- a/trunk/MT_systems/squoia/esqu/es-qu.cfg
+++ b/trunk/MT_systems/squoia/esqu/es-qu.cfg
@@ -30,6 +30,8 @@ desrModel2=/home/clsquoia/parser/desr-1.3.2/spanish.MLP
 
 ## set variables for lexical transfer
 bidix=$SQUOIA_DIR/squoia/esqu/lexica/es-quz.bin
+verblex=$SQUOIA_DIR/squoia/esqu/lexica/allVerbs.xml
+nounlex=$SQUOIA_DIR/squoia/esqu/lexica/noun_semantics.txt
 
 ####################
 #   Grammar Files  #
