--- a/trunk/MT_systems/squoia/esqu/es-qu.cfg
+++ b/trunk/MT_systems/squoia/esqu/es-qu.cfg
@@ -53,11 +53,13 @@ ChildToSiblingFile=$GRAMMAR_DIR/qu_childToSiblingChunk.rules
 ## set variables for morphological generation
 #XFST_GENERATOR = "SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst"
 morphgenerator=$SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst
+fomaFST=$SQUOIA_DIR/squoia/esqu/morphgen_foma/unificadoTransfer.fst
 
 ## set variables for language model
 #quModel=$SQUOIA_DIR/models/all_norm_3gram_interpolated_unigrams.lm
 quModel=$SQUOIA_DIR/models/cleaned_all_norm_5grams_interpolated.lm 
-
+quMorphModel=$SQUOIA_DIR/models/all_morph_5grams_interpolated_unigr.lm
+useMorphModel=1;
 nbest=3;
 
 
