--- a/MT_systems/squoia/esde/es-de.cfg
+++ b/MT_systems/squoia/esde/es-de.cfg
@@ -12,6 +12,7 @@ direction=esde
 #	interOrder, morph, words
 outformat=words
 informat=senttok	# plain|senttok|...|words
+useMorphModel=false
 
 ## set variables for tagging (FreeLing and Wapiti)
 # tagging
