--- a/trunk/MT_systems/squoia/esqu/es-qu.cfg
+++ b/trunk/MT_systems/squoia/esqu/es-qu.cfg
@@ -32,6 +32,7 @@ desrModel2=/mnt/storage/hex/projects/clsquoia/parser/desr-1.3.2/spanish.MLP
 bidix=$SQUOIA_DIR/squoia/esqu/lexica/es-quz.bin
 verblex=$SQUOIA_DIR/squoia/esqu/lexica/allVerbs.xml
 nounlex=$SQUOIA_DIR/squoia/esqu/lexica/noun_semantics.txt
+wordnet=/mnt/storage/hex/projects/clsquoia/resources/mcr30
 
 ####################
 #   Grammar Files  #
