--- a/MT_systems/squoia/esde/grammar/chunktype_es-de.cfg
+++ b/MT_systems/squoia/esde/grammar/chunktype_es-de.cfg
@@ -2,7 +2,7 @@
 sn	NP	#sintagma nominal	#nominal phrase
 sa	AP	#sintagma adjetivo	#adjective phrase
 s-adj	AP	#sintagma adjetivo	#adjective phrase
-sp-de	PP-von	#sintagma preposicional con la preposición "de"	#prepositional phrase with "von"?
+sp-de	PP-von	#sintagma preposicional con la preposición "de"	#prepositional phrase with "von"? deprecated?
 grup-sp	PP	#sintagma preposicional (todas las preposiciones excepto "de")	#prepositional phrase
 Fc	P-com	#signo de puntuación "coma"	#punctuation sign: comma
 F-no-c	P-noc	#todos los signos de puntuación que no sean "coma"	#punctuation sign
