--- a/trunk/MT_systems/squoia/esqu/es-qu.cfg
+++ b/trunk/MT_systems/squoia/esqu/es-qu.cfg
@@ -57,6 +57,7 @@ morphgenerator=$SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst
 fomaFST=$SQUOIA_DIR/squoia/esqu/morphgen_foma/unificadoTransfer.fst
 
 ## set variables for language model
+# training corpus for language model at SQUOIA_DIR/corpus/ocr_cleansed_corpus/all_ocrCorr_qu/morph_texts/all.morph
 #quModel=$SQUOIA_DIR/models/all_norm_3gram_interpolated_unigrams.lm
 quModel=$SQUOIA_DIR/models/cleaned_all_norm_5grams_interpolated.lm 
 quMorphModel=$SQUOIA_DIR/models/all_morph_5grams_interpolated_unigr.lm
