--- a/trunk/MT_systems/squoia/esqu/es-qu.cfg
+++ b/trunk/MT_systems/squoia/esqu/es-qu.cfg
@@ -23,13 +23,18 @@ freelingConf=/mnt/storage/hex/projects/clsquoia/arios_squoia/FreeLingModules/es_
 matxin=$SQUOIA_DIR/bin
 
 ## set variables for desr parser
-desrPort1=5678
-desrPort2=1234
-desrModel1=/mnt/storage/hex/projects/clsquoia/parser/desr-1.3.2/spanish_es4.MLP
-desrModel2=/mnt/storage/hex/projects/clsquoia/parser/desr-1.3.2/spanish.MLP
+# desrPort1=5678
+# desrPort2=1234
+# desrModel1=/mnt/storage/hex/projects/clsquoia/parser/desr-1.3.2/spanish_es4.MLP
+# desrModel2=/mnt/storage/hex/projects/clsquoia/parser/desr-1.3.2/spanish.MLP
+
+# set variables for maltparser
+maltPort=1234
+maltModel=/mnt/storage/hex/projects/clsquoia/ancora_parsing/model_large_training.mco
+
 
 ## set variables for lexical transfer
-bidix=$SQUOIA_DIR/squoia/esqu/lexica/es-quz.bin
+bidix=$SQUOIA_DIR/squoia/esqu/lexica/es-quz.bin 
 verblex=$SQUOIA_DIR/squoia/esqu/lexica/allVerbs.xml
 nounlex=$SQUOIA_DIR/squoia/esqu/lexica/noun_semantics.txt
 wordnet=/mnt/storage/hex/projects/clsquoia/resources/mcr30
