translation with maltparser

--- a/MT_systems/squoia/esqu/es-qu.cfg
+++ b/MT_systems/squoia/esqu/es-qu.cfg
@@ -30,7 +30,9 @@ matxin=$SQUOIA_DIR/bin
 
 # set variables for maltparser
 maltPort=1234
-maltModel=/mnt/storage/hex/projects/clsquoia/ancora_parsing/model_large_training.mco
+maltModel=$SQUOIA_DIR/models/model_large_training.mco
+maltPath=/mnt/storage/hex/projects/clsquoia/parser/maltparser-1.8/maltparser-1.8.jar
+#maltHost=localhost atm: always localhost
 
 
 ## set variables for lexical transfer
