--- a/MT_systems/squoia/esqu/es-qu.cfg
+++ b/MT_systems/squoia/esqu/es-qu.cfg
@@ -30,7 +30,8 @@ matxin=$SQUOIA_DIR/bin
 
 # set variables for maltparser
 maltPort=1234
-maltModel=$SQUOIA_DIR/models/model_large_training.mco
+maltModel=$SQUOIA_DIR/models/splitDatesModel.mco
+#maltModel=$SQUOIA_DIR/models/model_large_training.mco
 maltPath=/mnt/storage/hex/projects/clsquoia/parser/maltparser-1.8/maltparser-1.8.jar
 #maltHost=localhost atm: always localhost
 
