many fixes, included CorZu for co-reference resolution

--- a/FreeLingModules/es_squoia.cfg
+++ b/FreeLingModules/es_squoia.cfg
@@ -46,15 +46,17 @@ TraceModule=0x0000
 #InputFormat=plain
 InputFormat=text
 OutputFormat=crf
+InputLevel=text
+OutputLevel=morfo
 
 # consider each newline as a sentence end
 AlwaysFlush=yes
 
 #### Tokenizer options
-TokenizerFile=/opt/squoia/squoia/FreeLingModules/grammar_es/tokenizer.dat
+TokenizerFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/tokenizer.dat
 
 #### Splitter options
-SplitterFile=/opt/squoia/squoia/FreeLingModules/grammar_es/splitter.dat
+SplitterFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/splitter.dat
 
 #### Morfo options
 AffixAnalysis=yes
@@ -68,29 +70,29 @@ ProbabilityAssignment=yes
 #OrthographicCorrection=no
 DecimalPoint=,
 ThousandPoint=.
-LocutionsFile=/opt/squoia/squoia/FreeLingModules/grammar_es/locucions_squoia.dat 
-QuantitiesFile=/opt/squoia/squoia/FreeLingModules/grammar_es/quantities.dat
-AffixFile=/opt/squoia/squoia/FreeLingModules/grammar_es/afixos_desr.dat
+LocutionsFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/locucions_squoia.dat 
+QuantitiesFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/quantities.dat
+AffixFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/afixos_desr.dat
 #ProbabilityFile=/mnt/storage/hex/projects/clsquoia/arios_squoia/FreeLingModules/grammar_es/probabilitats.dat_old
-ProbabilityFile=/opt/squoia/squoia/FreeLingModules/grammar_es/probabilitats.dat
+ProbabilityFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/probabilitats.dat
 #ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
-DictionaryFile=/opt/squoia/squoia/FreeLingModules/grammar_es/dicc_squoia.src
-PunctuationFile=/opt/squoia/squoia/FreeLingModules/common/punct.dat
+DictionaryFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/dicc_squoia.src
+PunctuationFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/common/punct.dat
 ProbabilityThreshold=0.001
 
 # NER options 
 NERecognition=yes
-NPDataFile=/opt/squoia/squoia/FreeLingModules/grammar_es/np_desr.dat
+NPDataFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/np_desr.dat
 ## comment line above and uncomment that below, if you want 
 ## a better NE recognizer (higer accuracy, lower speed)
 #NPDataFile=/mnt/storage/hex/projects/clsquoia/arios_squoia/FreeLingModules/grammar_es/ner/ner-ab.dat
 
 #Spelling Corrector config file
-#CorrectorFile=/opt/squoia/squoia/FreeLingModules/grammar_es/corrector/corrector.dat
+#CorrectorFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/corrector/corrector.dat
 
 ## Phonetic encoding of words.
 Phonetics=no
-PhoneticsFile=/opt/squoia/squoia/FreeLingModules/grammar_es/phonetics.dat
+PhoneticsFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/phonetics.dat
 
 ## NEC options
 NEClassification=yes
@@ -99,13 +101,13 @@ NECFile=$FREELINGSHARE/es/nerc/nec/nec-ab-poor1.dat
 
 ## Sense annotation options (none,all,mfs,ukb)
 SenseAnnotation=none
-SenseConfigFile=/opt/squoia/squoia/FreeLingModules/grammar_es/senses.dat
-UKBConfigFile=/opt/squoia/squoia/FreeLingModules/grammar_es/ukb.dat
+SenseConfigFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/senses.dat
+UKBConfigFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/ukb.dat
 
 #### Tagger options
 Tagger=hmm
-TaggerHMMFile=/opt/squoia/squoia/FreeLingModules/grammar_es/tagger.dat
-TaggerRelaxFile=/opt/squoia/squoia/FreeLingModules/grammar_es/constr_gram_nora.dat
+TaggerHMMFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/tagger.dat
+TaggerRelaxFile=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/grammar_es/constr_gram_nora.dat
 TaggerRelaxMaxIter=500
 TaggerRelaxScaleFactor=670.0
 TaggerRelaxEpsilon=0.001
