--- a/MT_systems/squoia/esqu/es-qu.cfg
+++ b/MT_systems/squoia/esqu/es-qu.cfg
@@ -1,6 +1,6 @@
 # Define where to look for grammar file for the tranlation
-GRAMMAR_DIR=/mnt/storage/hex/projects/clsquoia/arios_squoia/MT_systems/squoia/esqu/grammar
-SQUOIA_DIR=/mnt/storage/hex/projects/clsquoia/arios_squoia/MT_systems
+GRAMMAR_DIR=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/MT_systems/squoia/esqu/grammar
+SQUOIA_DIR=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/MT_systems
 
 direction=esqu
 # set output format
@@ -15,11 +15,11 @@ informat=senttok
 
 ## set variables for tagging (FreeLing and Wapiti)
 # tagging
-wapiti=/mnt/storage/hex/projects/clsquoia/Wapiti
+wapiti=/mnt/storage/hex/projects/clsquoia/wapiti-1.5.0
 wapitiModel=$SQUOIA_DIR/models/3gram_enhancedAncora.model
 wapitiPort=8888
 freelingPort=8844
-freelingConf=/mnt/storage/hex/projects/clsquoia/arios_squoia/FreeLingModules/es_desr.cfg
+freelingConf=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/es_squoia.cfg
 matxin=$SQUOIA_DIR/bin
 
 ## set variables for desr parser
