ne classification with fl4

--- a/MT_systems/squoia/esqu/es-qu.cfg
+++ b/MT_systems/squoia/esqu/es-qu.cfg
@@ -20,6 +20,9 @@ wapitiModel=$SQUOIA_DIR/models/3gram_enhancedAncora.model
 wapitiPort=8888
 freelingPort=8843
 freelingConf=/mnt/storage/hex/projects/clsquoia/arios_squoia_git/FreeLingModules/es_squoia.cfg
+## config for ne classification (since FL 4 no longer possible in morphological analyzer
+nec=/opt/matxin/local/bin/
+neccfg=/opt/matxin/local/share/freeling/es/nerc/nec/nec-ab-rich.dat
 matxin=$SQUOIA_DIR/bin
 
 ## set variables for desr parser
