--- a/FreeLingModules/example.cfg
+++ b/FreeLingModules/example.cfg
@@ -43,17 +43,20 @@ TraceModule=0x0000
 ## formats are a choice of the main program using the library, as well
 ## as the responsability of calling only the required modules.
 ## Valid input/output formats are: plain, token, splitted, morfo, tagged, parsed
-InputFormat=plain
-OutputFormat=tagged
+#InputFormat=plain
+InputFormat=text
+OutputFormat=crf
+InputLevel=text
+OutputLevel=morfo
 
 # consider each newline as a sentence end
 AlwaysFlush=yes
 
 #### Tokenizer options
-TokenizerFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/tokenizer.dat
+TokenizerFile=your-path-to-squoia/FreeLingModules/grammar_es/tokenizer.dat
 
 #### Splitter options
-SplitterFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/splitter.dat
+SplitterFile=your-path-to-squoia/FreeLingModules/grammar_es/splitter.dat
 
 #### Morfo options
 AffixAnalysis=yes
@@ -61,63 +64,26 @@ MultiwordsDetection=yes
 NumbersDetection=yes
 PunctuationDetection=yes
 DatesDetection=yes
-QuantitiesDetection=no
+QuantitiesDetection=yes
 DictionarySearch=yes
 ProbabilityAssignment=yes
-OrthographicCorrection=no
+#OrthographicCorrection=no
 DecimalPoint=,
 ThousandPoint=.
-LocutionsFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/locucions_laura.dat 
-QuantitiesFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/quantities.dat
-AffixFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/afixos_desr.dat
-#ProbabilityFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/probabilitats.dat_old
-ProbabilityFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/probabilitats.dat
-#ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
-DictionaryFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/dicc_desr.src
-PunctuationFile=/opt/share/freeling/common/punct.dat
+LocutionsFile=your-path-to-squoia/FreeLingModules/grammar_es/locucions_squoia.dat 
+QuantitiesFile=your-path-to-squoia/FreeLingModules/grammar_es/quantities.dat
+AffixFile=your-path-to-squoia/FreeLingModules/grammar_es/afixos_desr.dat
+ProbabilityFile=your-path-to-squoia/FreeLingModules/grammar_es/probabilitats.dat
+DictionaryFile=your-path-to-squoia/FreeLingModules/grammar_es/dicc_squoia.src
+PunctuationFile=your-path-to-squoia/FreeLingModules/common/punct.dat
 ProbabilityThreshold=0.001
 
 # NER options 
 NERecognition=yes
-NPDataFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/np_desr.dat
-## comment line above and uncomment that below, if you want 
-## a better NE recognizer (higer accuracy, lower speed)
-#NPDataFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/ner/ner-ab.dat
-
-#Spelling Corrector config file
-CorrectorFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/corrector/corrector.dat
-
-## Phonetic encoding of words.
-Phonetics=no
-PhoneticsFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/phonetics.dat
+NPDataFile=your-path-to-squoia/FreeLingModules/grammar_es/np_desr.dat
 
 ## NEC options
 NEClassification=yes
-NECFile=$FREELINGSHARE/es/nerc/nec/nec-ab-poor1.dat
-#NECFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/nec/nec-svm.dat
+NECFile=path-to-your-freeling-installation/share/freeling/es/nerc/nec/nec-ab-rich.dat
 
-## Sense annotation options (none,all,mfs,ukb)
-SenseAnnotation=none
-SenseConfigFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/senses.dat
-UKBConfigFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/ukb.dat
 
-#### Tagger options
-Tagger=relax
-TaggerHMMFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/tagger.dat
-TaggerRelaxFile=$HOME/squoia/google_squoia/FreeLingModules/grammar_es/constr_gram_nora.dat
-TaggerRelaxMaxIter=500
-TaggerRelaxScaleFactor=670.0
-TaggerRelaxEpsilon=0.001
-TaggerRetokenize=yes
-TaggerForceSelect=tagger
-
-##TODO: don't need this, but has to be specified, otherwise analyzer crashes!!
-#### Parser options
-GrammarFile=$FREELINGSHARE/es/chunker/grammar-chunk.dat
-
-#### Dependence Parser options
-DepTxalaFile=$FREELINGSHARE/es/dep/dependences.dat
-
-#### Coreference Solver options
-CoreferenceResolution=no
-CorefFile=$FREELINGSHARE/es/coref/coref.dat
