--- a/MT_systems/squoia/esqu/es-qu.cfg
+++ b/MT_systems/squoia/esqu/es-qu.cfg
@@ -64,7 +64,7 @@ ChildToSiblingFile=$GRAMMAR_DIR/qu_childToSiblingChunk.rules
 
 ## set variables for morphological generation
 #XFST_GENERATOR = "SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst"
-morphgenerator=$SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst
+# morphgenerator=$SQUOIA_DIR/squoia/esqu/morphgen/unificadoTransfer.fst
 fomaFST=$SQUOIA_DIR/squoia/esqu/morphgen_foma/unificadoTransfer.fst
 
 ## set variables for language model
